feat: implement joystick http controller
