# internal/api/types.gen.go
@@ -3,11 +3,22 @@
 // Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
 package api
 
+// Defines values for Button.
+const (
+	Down  Button = "down"
+	Left  Button = "left"
+	Right Button = "right"
+	Up    Button = "up"
+)
+
 // Defines values for HealthStatus.
 const (
 	Draining HealthStatus = "draining"
 	Ready    HealthStatus = "ready"
 )
+
+// Button defines model for Button.
+type Button string
 
 // Error defines model for Error.
 type Error struct {
